--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,23 +1,74 @@
-FROM node:18-alpine
+# Base stage for dependencies
+FROM node:18-alpine AS base
 
+# Install dependencies only when needed
+FROM base AS deps
+RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
 
-# Install dependencies
-RUN npm install
+# Install dependencies with legacy peer deps for compatibility
+RUN npm ci --legacy-peer-deps || npm install --legacy-peer-deps
 
-# Copy application files
+# Builder stage
+FROM base AS builder
+WORKDIR /app
+
+# Copy dependencies from deps stage
+COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
-# Copy .env file (make sure to create .env from env.example.txt before building)
-# For production, use docker-compose or build args to pass environment variables
-COPY .env* ./
+# Environment variables for build time (NEXT_PUBLIC_* vars are embedded in the build)
+# These can be overridden via build args
+ARG NEXT_PUBLIC_BACKEND_URL
+ARG NEXT_PUBLIC_SIGN_IN_URL=/auth/sign-in
+ARG NEXT_PUBLIC_SIGN_UP_URL=/auth/sign-up
+ARG NEXT_PUBLIC_AFTER_SIGN_IN_URL=/dashboard/overview
+ARG NEXT_PUBLIC_AFTER_SIGN_UP_URL=/dashboard/overview
 
-# Expose the development port
+ENV NEXT_PUBLIC_BACKEND_URL=$NEXT_PUBLIC_BACKEND_URL
+ENV NEXT_PUBLIC_SIGN_IN_URL=$NEXT_PUBLIC_SIGN_IN_URL
+ENV NEXT_PUBLIC_SIGN_UP_URL=$NEXT_PUBLIC_SIGN_UP_URL
+ENV NEXT_PUBLIC_AFTER_SIGN_IN_URL=$NEXT_PUBLIC_AFTER_SIGN_IN_URL
+ENV NEXT_PUBLIC_AFTER_SIGN_UP_URL=$NEXT_PUBLIC_AFTER_SIGN_UP_URL
+
+
+# Disable telemetry during build
+ENV NEXT_TELEMETRY_DISABLED=1
+
+# Build the application
+RUN npm run build
+
+# Production stage
+FROM base AS runner
+WORKDIR /app
+
+ENV NODE_ENV=production
+ENV NEXT_TELEMETRY_DISABLED=1
+
+# Create a non-root user for security
+RUN addgroup --system --gid 1001 nodejs
+RUN adduser --system --uid 1001 nextjs
+
+# Copy necessary files
+COPY --from=builder /app/public ./public
+
+# Set the correct permission for prerender cache
+RUN mkdir .next
+RUN chown nextjs:nodejs .next
+
+# Copy built application
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+
+USER nextjs
+
 EXPOSE 3000
 
-# Start the development server
-# Next.js will automatically load .env files
-CMD ["npm", "run", "dev"]
+ENV PORT=3000
+ENV HOSTNAME="0.0.0.0"
+
+# Start the production server
+CMD ["node", "server.js"]
