--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -33,7 +33,7 @@ ENV PATH="/app/.venv/bin:$PATH"
 WORKDIR /code
 
 # Copy necessary files for migrations
-COPY --from=builder --chown=app:app /app/src /code
+COPY --from=builder --chown=app:app /app/src/app /code/app
 
 # Run migrations
 CMD ["alembic", "upgrade", "head"]
@@ -58,7 +58,7 @@ USER app
 WORKDIR /code
 
     # Copy application code
-COPY --from=builder --chown=app:app /app/src /code
+COPY --from=builder --chown=app:app /app/src/app /code/app
 
 # Expose the port the app runs on
 EXPOSE 8000
