--- a/frontend/package.json
+++ b/frontend/package.json
@@ -70,6 +70,7 @@
     "input-otp": "^1.4.2",
     "kbar": "^0.1.0-beta.45",
     "lucide-react": "^0.476.0",
+    "lucide-static": "^0.545.0",
     "match-sorter": "^8.0.0",
     "motion": "^11.17.0",
     "next": "^15.5.4",
