--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "mypy>=1.16.0",
     "authlib>=1.3.0",
     "httpx-oauth>=0.10.0",
+    "pandas>=2.3.3",
 ]
 
 [project.optional-dependencies]
